@@ -1,6 +1,5 @@
 package yakxin.columbina.abstractClasses.actionMiddle;
 
-import org.openstreetmap.josm.command.AddCommand;
 import org.openstreetmap.josm.command.Command;
 import org.openstreetmap.josm.command.DeleteCommand;
 import org.openstreetmap.josm.data.osm.DataSet;
@@ -17,7 +16,8 @@ import yakxin.columbina.abstractClasses.AbstractGenerator;
 import yakxin.columbina.abstractClasses.AbstractParams;
 import yakxin.columbina.abstractClasses.AbstractPreference;
 import yakxin.columbina.data.ColumbinaException;
-import yakxin.columbina.data.dto.ColumbinaSingleOutput;
+import yakxin.columbina.data.dto.outputs.ColumbinaOutputIntent;
+import yakxin.columbina.data.dto.outputs.ColumbinaSingleOutput;
 import yakxin.columbina.data.dto.inputs.ColumbinaInput;
 import yakxin.columbina.data.dto.inputs.ColumbinaSingleInput;
 import yakxin.columbina.utils.UtilsData;
@@ -25,6 +25,7 @@ import yakxin.columbina.utils.UtilsUI;
 
 import javax.swing.*;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * 圆角、斜角、缓和曲线用的模板类
@@ -77,24 +78,8 @@ public abstract class ActionWithBatchWays<
 
     @Override
     public int checkInputNum(ColumbinaInput totalInput) {
-        boolean ifOnlyContain2NodeWays = true;
-        // 没有选定路径、（有限制时）选择太少或太多中止流程
-        if (totalInput.isEmpty(Way.class))
-            throw new IllegalArgumentException(I18n.tr("No way is selected."));
-        // 检查是否只包含2点路径
-        for (Way way : totalInput.getWays()) {
-            if ((!way.isClosed() && way.getNodes().size() >= 3) || (way.isClosed() && way.getNodes().size() >= 4)) {
-                ifOnlyContain2NodeWays = false;
-                break;
-            }
-        }
-        if (ifOnlyContain2NodeWays) throw new IllegalArgumentException("All selected ways only contain 2 nodes, and cannot find corners.");
-
-        // 参数检查
-        if (minSelection != NO_LIMITATION_ON_INPUT_NUM && totalInput.getInputNum(Way.class) < minSelection)
-            throw new IllegalArgumentException(I18n.tr("Too few ways are selected, should be grater than {0}.", minSelection));
-        if (maxSelection != NO_LIMITATION_ON_INPUT_NUM && totalInput.getInputNum(Way.class) > maxSelection)
-            throw new IllegalArgumentException(I18n.tr("Too many ways are selected, should be less than {0}.", maxSelection));
+        // 参数数量检查，不检查是否只包含2点路径（由checkInputDetails判断）
+        UtilsData.checkInputNum(totalInput, NO_LIMITATION_ON_INPUT_NUM, NO_LIMITATION_ON_INPUT_NUM, minSelection, maxSelection);
         if (totalInput.getInputNum(Way.class) > 5) {
                 int confirmTooMany = JOptionPane.showConfirmDialog(
                         null,
@@ -108,16 +93,30 @@ public abstract class ActionWithBatchWays<
     }
 
     @Override
-    public int checkInputDetails(List<ColumbinaSingleInput> singleInputs) {return CHECK_OK;}  // 这个模板下暂时没有需要具体检查的
+    public int checkInputDetails(List<ColumbinaSingleInput> singleInputs) {
+        // 检查是否只包含2点路径
+        boolean ifOnlyContain2NodeWays = true;
+        for (ColumbinaSingleInput singleInput : singleInputs) {
+            Way way = singleInput.ways.get(0);
+            if ((!way.isClosed() && way.getNodes().size() >= 3) || (way.isClosed() && way.getNodes().size() >= 4)) {
+                ifOnlyContain2NodeWays = false;
+                break;  // 有正常路径就行
+            }
+        }
+        if (ifOnlyContain2NodeWays)
+            throw new ColumbinaException("All selected ways only contain 2 nodes, and cannot find corners.");
+
+        return CHECK_OK;
+    }
 
     @Override
-    public List<ColumbinaSingleInput> splitBatchInputs(ColumbinaInput inputs) {
+    public List<ColumbinaSingleInput> splitBatchInputs(ColumbinaInput totalInput) {
         // 对于这一类，单组输入都是一条路径
         List<ColumbinaSingleInput> singleInputs = new ArrayList<>();
-        for (Way wayToBeProcessed : inputs.getWays()) {
+        for (Way wayToBeProcessed : totalInput.getWays()) {
             singleInputs.add(new ColumbinaSingleInput(
-                    new ArrayList<Node>(),
-                    new ArrayList<Way>(Collections.singleton(wayToBeProcessed))
+                    new ArrayList<>(),
+                    new ArrayList<>(Collections.singleton(wayToBeProcessed))
             ));
         }
         return singleInputs;
@@ -128,37 +127,37 @@ public abstract class ActionWithBatchWays<
             DataSet ds, List<ColumbinaSingleInput> singleInputs,
             boolean copyTag
     ) {
-        List<Command> commands = new ArrayList<>();
+        List<ColumbinaOutputIntent<?>> intents = new ArrayList<>();
         inputOutputPairs = new HashMap<>();  // 输入节点/路径k与新绘制的路径v的打包对
-        Map<Way, List<Long>> failedNodeIds = new HashMap<>();  // 处理输入节点/路径k与处理时k上失败的节点v的打包对
+        Map<Way, List<OsmPrimitive>> failedNodeIds = new HashMap<>();  // 处理输入节点/路径k与处理时k上失败的节点v的打包对
         // 处理路径
         for (ColumbinaSingleInput singleInput : singleInputs) {  // 分别处理每个输入路径
-            try {  // 一条路径出错尽可能不影响其他的
-                NewNodeWayCommands newNWCmd = getAddCmd(ds, singleInput, generator, params, copyTag);  // 获取路径
-
-                if (newNWCmd != null) {  // 应该不会和已提交但未执行（进入ds）的重复提交
-                    commands.addAll(newNWCmd.addCommands);
-                    inputOutputPairs.put(singleInput.ways.getFirst(), newNWCmd.newWay);
-                    failedNodeIds.put(singleInput.ways.getFirst(), newNWCmd.failedNodeIds);
-                }
-                else UtilsUI.warnInfo(I18n.tr(
-                        "Algorithm did not return at least 2 nodes to form a way for way {0}, this way was not processed.",
-                        singleInput.ways.getFirst().getUniqueId()
-                ));
-            } catch (Exception exAdd) {
-                UtilsUI.errorInfo(I18n.tr("Unexpected error occurred while processing way {0}: {1}",
-                        singleInput.ways.getFirst().getUniqueId(), exAdd.getMessage()
-                ));
+            // 调用生成传入的函数计算路径
+            ColumbinaSingleOutput singleOutput = generator.getOutputForSingleInput(singleInput, params);
+            if (singleOutput == null) continue;
+            if (!singleOutput.isValid()) continue;
+            failedNodeIds.put(singleInput.ways.get(0), singleOutput.partialFailureInputs);
+            
+            // 收集新线（目前假定singleOutput只输出一条新线）
+            Way newWay = (Way) singleOutput.representatives.get(0);
+            
+            // 复制原Way标签
+            if (copyTag) {
+                Map<String, String> wayTags = getNewWayTags(singleInput);
+                newWay.setKeys(wayTags);
             }
+            
+            intents.addAll(singleOutput.outputIntents);
+            inputOutputPairs.put(singleInput.ways.get(0), newWay);
         }
+        // 转为指令（toCommands已去重）
+        List<Command> commands = ColumbinaOutputIntent.toCommands(intents, ds);
 
-        if (commands.isEmpty()) {  // 未能成功生成一条线
+        if (commands.isEmpty())  // 未能成功生成一条线
             throw new ColumbinaException(I18n.tr("Failed to generate any new way."));
-        }
-        // 去重防止提交重复添加
-        commands = commands.stream().distinct().toList();
 
         // 提示失败信息
+        // TODO：汇总生成器和解释器的错误信息
         showFailedProcessedCorner(failedNodeIds);
 
         return commands;
@@ -217,7 +216,7 @@ public abstract class ActionWithBatchWays<
             }
         }
         // 去重防止提交重复删除
-        commands = commands.stream().distinct().toList();
+        commands = commands.stream().distinct().collect(Collectors.toList());
         return commands;
     }
 
@@ -232,55 +231,11 @@ public abstract class ActionWithBatchWays<
     public Map<String, String> getNewWayTags(ColumbinaSingleInput singleInput) {
         Map<String, String> newWayTags = new HashMap<>();
         if (singleInput.ways != null && singleInput.ways.size() == 1)
-            newWayTags = singleInput.ways.getFirst().getInterestingTags();  // 读取原Way的tag
+            newWayTags = singleInput.ways.get(0).getInterestingTags();  // 读取原Way的tag
         return newWayTags;
     }
 
     /// 特有方法
-    /**
-     * 调用Generator获得绘制单条新路径所需指令
-     * <p>将会调用具体生成器的getNewNodeWayForSingleInput方法，由于输入要素为ColumbinaSingleInput类型，具体生成器类需要自行判断、转换为需要的类型
-     * @param ds 数据集
-     * @param singleInput 选定输入要素
-     * @param generator 生成器
-     * @param params 输入参数
-     * @param copyTag 是否复制标签
-     * @return 对于一组输入产生的、绘制单条路径所需的指令
-     */
-    private NewNodeWayCommands getAddCmd (
-            DataSet ds, ColumbinaSingleInput singleInput,
-            GeneratorType generator, ParamType params,
-            boolean copyTag) {
-        // 调用生成传入的函数计算路径
-        ColumbinaSingleOutput singleOutput = generator.getOutputForSingleInput(singleInput, params);
-        if (singleOutput == null) return null;
-        if (!singleOutput.ifCanMakeAWay()) return null;
-        List<Node> newNodes = singleOutput.newNodes;
-        List<Long> failedNodeIds = singleOutput.failedNodes;
-        List<Command> addCommands = new LinkedList<>();
-
-        // 画新线
-        Way newWay = singleOutput.linkNodesToWay();
-
-        // 复制原Way标签
-        if (copyTag) {
-            Map<String, String> keys = getNewWayTags(singleInput);
-            if (newWay != null && keys != null)
-                newWay.setKeys(keys);
-        }
-
-        // 正式构建绘制命令
-        if (newWay != null) {
-            for (Node n : newNodes.stream().distinct().toList()) {  // 路径内部可能有节点复用（如闭合线），去重
-                if (!ds.containsNode(n))  // 新路径的节点在ds中未绘制（不是复用的）才准备绘制
-                    addCommands.add(new AddCommand(ds, n));  // 添加节点到命令序列
-            }
-            addCommands.add(new AddCommand(ds, newWay));  // 添加线到命令序列
-        }
-
-        return new NewNodeWayCommands(newWay, addCommands, failedNodeIds);
-    }
-
     /**
      * 移除/替换一条旧路径及无用节点的指令，删多条把这个函数放在for里面一个个删
      * <p>移除/替换操作是ActionWithBatchWays里面3个功能统一的，所以统一这里实现
@@ -316,7 +271,7 @@ public abstract class ActionWithBatchWays<
                 removeCommands.add(new DeleteCommand(ds, oldWay));  // 去除路径
                 // 去除节点（闭合曲线会删闭合点2次，自交路径也会导致重复删除，需要去重）
                 // 不能用ds.ContainsNode(n)判断删没删，因为cmdDel还没提交，delCommands内部重复删除会炸
-                for (Node n : oldWay.getNodes().stream().distinct().toList()) {
+                for (Node n : oldWay.getNodes().stream().distinct().collect(Collectors.toList())) {
                     boolean canBeDeleted = !n.isTagged();  // 有tag不删
                     for (OsmPrimitive ref : n.getReferrers()) {
                         if (!(ref instanceof Way && ref.equals(oldWay))) {
@@ -338,34 +293,24 @@ public abstract class ActionWithBatchWays<
 
     /**
      * 弹出消息提示处理失败的节点
-     * @param failedNodeIds 存在失败情况的路径和具体失败的节点列表组成的打包对
+     * @param failedNodes 存在失败情况的路径和具体失败的节点列表组成的打包对
      */
-    public void showFailedProcessedCorner(Map<Way, List<Long>> failedNodeIds) {
+    public void showFailedProcessedCorner(Map<Way, List<OsmPrimitive>> failedNodes) {
         // 如果有拐角处理失败，则提示
-        if (failedNodeIds != null && !failedNodeIds.isEmpty()) {
+        if (failedNodes != null && !failedNodes.isEmpty()) {
             boolean hasFailedNodes = false;
-            String failedInfo = I18n.tr("The following corner nodes could not be rounded due to too short distance to adjacent nodes or not meeting the angle restrictions: ");
-            for (Map.Entry<Way, List<Long>> failedEntry : failedNodeIds.entrySet()) {
+            StringBuilder failedInfo = new StringBuilder(I18n.tr("The following corner nodes could not be processed due to too short distance to adjacent nodes or not meeting the angle restrictions: "));
+            for (Map.Entry<Way, List<OsmPrimitive>> failedEntry : failedNodes.entrySet()) {
                 if (failedEntry.getValue().isEmpty()) continue;
-                failedInfo = failedInfo
-                        + I18n.tr("\nWay") + failedEntry.getKey().getUniqueId()
-                        + I18n.tr(": ") + failedEntry.getValue();
+                failedInfo.append(
+                        I18n.tr("\nWay")).append(failedEntry.getKey().getUniqueId())
+                        .append(I18n.tr(": ")).append(
+                                failedEntry.getValue().stream().map(OsmPrimitive::getUniqueId).map(String::valueOf)
+                                        .collect(Collectors.joining(",", "[", "]"))
+                        );
                 hasFailedNodes = true;
             }
-            if (hasFailedNodes) UtilsUI.warnInfo(failedInfo);
-        }
-    }
-
-    /// 内部类
-    private static final class NewNodeWayCommands {
-        public final Way newWay;
-        public final List<Command> addCommands;
-        public final List<Long> failedNodeIds;
-
-        public NewNodeWayCommands(Way newWay, List<Command> addCommands, List<Long> failedNodeIds) {
-            this.newWay = newWay;
-            this.addCommands = addCommands;
-            this.failedNodeIds = failedNodeIds;
+            if (hasFailedNodes) UtilsUI.warnInfo(failedInfo.toString());
         }
     }
 }
