@@ -1,11 +1,12 @@
 package yakxin.columbina.features.angleLine;
 
-import org.openstreetmap.josm.data.coor.EastNorth;
 import org.openstreetmap.josm.data.osm.Node;
 import org.openstreetmap.josm.data.osm.Way;
 import yakxin.columbina.abstractClasses.AbstractGenerator;
-import yakxin.columbina.data.dto.ColumbinaSingleOutput;
+import yakxin.columbina.data.dto.outputs.ColumbinaSingleOutput;
 import yakxin.columbina.data.dto.inputs.ColumbinaSingleInput;
+import yakxin.columbina.data.ColumbinaEN;
+import yakxin.columbina.utils.UtilsData;
 import yakxin.columbina.utils.UtilsMath;
 
 import java.util.ArrayList;
@@ -16,10 +17,16 @@ public final class AngleLineGenerator extends AbstractGenerator<AngleLineParams>
     @Override
     public ColumbinaSingleOutput getOutputForSingleInput(ColumbinaSingleInput input, AngleLineParams params)  // 内部注意类型检查！
     {
+        if (input.quickPrecomputedData.get("nodeIndex") instanceof Integer)  // 如果有快捷传递中间量
+            return buildAngleLine(
+                    input.nodes.get(0), input.ways.get(0), (Integer) input.quickPrecomputedData.get("nodeIndex"),
+                    params.angleDeg, params.surfaceLength
+            );
         return buildAngleLine(
-                input.nodes.getFirst(), input.ways.getFirst(),
+                input.nodes.get(0), input.ways.get(0), UtilsData.getNodeIndex(input.nodes.get(0), input.ways.get(0)),
                 params.angleDeg, params.surfaceLength
         );
+        // throw new ColumbinaException(I18n.tr("No or wrong precomputed data received."));
     }
 
     /**
@@ -31,37 +38,28 @@ public final class AngleLineGenerator extends AbstractGenerator<AngleLineParams>
      * @return 绘制的线段
      */
     public static ColumbinaSingleOutput buildAngleLine(
-            Node node, Way way,
+            Node node, Way way, int nodeIndex,
             double angleDeg, double surfaceLength  // 左拐角度为正，右拐为负
     ) {
-        /// 具体检查
-        // 闭合曲线过滤闭合点，顺便查重
-        int count = 0, nodeIndex = 0, nodeNum = way.isClosed() ? way.getNodes().size() - 1 : way.getNodes().size();
-        List<Node> wayNodes = new ArrayList<>();
-        for (int i = 0; i < nodeNum; i ++) {
-            if (way.getNode(i) == node) {
-                count ++; nodeIndex = i;
-            }
-            wayNodes.add(way.getNode(i));
-        }
+        // 查找是第几个（不用查重了，action具体检查中已经做了）
+        int nodeNum = way.isClosed() ? way.getNodes().size() - 1 : way.getNodes().size();
+        List<Node> wayNodes = way.getNodes();
 
         /// 正式计算
-        EastNorth prevEN = wayNodes.get((nodeIndex + nodeNum - 1) % nodeNum).getEastNorth();
-        EastNorth startEN = wayNodes.get(nodeIndex).getEastNorth();
-        double[] prev = new double[]{prevEN.getX(), prevEN.getY()};
-        double[] start = new double[]{startEN.getX(), startEN.getY()};
+        ColumbinaEN prevEN = new ColumbinaEN(wayNodes.get((nodeIndex + nodeNum - 1) % nodeNum).getEastNorth());
+        ColumbinaEN startEN = new ColumbinaEN(wayNodes.get(nodeIndex).getEastNorth());
 
-        double enterAngleRad = UtilsMath.getBearingRadFromAtoB(prev, start);
+        double enterAngleRad = prevEN.deflectionRadTo(startEN);
         double turningAngleRad = Math.toRadians(angleDeg);
         double enLength = UtilsMath.surfaceDistanceToEastNorth(surfaceLength, node.lat());
 
-        double[] destination = UtilsMath.walkAlongAngleDistance(start, enterAngleRad + turningAngleRad, enLength);
+        ColumbinaEN destination = startEN.walk(enterAngleRad + turningAngleRad, enLength);
 
         List<Node> newNodes = new ArrayList<>();
         newNodes.add(node);
-        newNodes.add(new Node(new EastNorth(destination[0], destination[1])));
+        newNodes.add(new Node(destination));
 
-        return new ColumbinaSingleOutput(newNodes, new ArrayList<Long>());  // 无failed部分
+        return new ColumbinaSingleOutput(newNodes, new ArrayList<>());  // 无failed部分
     }
 }
 
