@@ -9,6 +9,7 @@ import yakxin.columbina.abstractClasses.actionMiddle.ActionWithBatchWays;
 import yakxin.columbina.data.dto.inputs.ColumbinaInput;
 
 import java.awt.event.KeyEvent;
+import java.util.stream.Collectors;
 
 public final class ChamferAction extends
         ActionWithBatchWays<ChamferGenerator, ChamferPreference, ChamferParams>
@@ -29,7 +30,7 @@ public final class ChamferAction extends
         super(
                 name, iconName, description, shortcut,
                 generator, preference,
-                AbstractDrawingAction.NO_LIMITATION_ON_INPUT_NUM, AbstractDrawingAction.NO_LIMITATION_ON_INPUT_NUM
+                1, AbstractDrawingAction.NO_LIMITATION_ON_INPUT_NUM
         );
     }
 
@@ -55,13 +56,13 @@ public final class ChamferAction extends
     @Override
     public String getUndoRedoInfo(ColumbinaInput inputs, ChamferParams params) {
         String undoRedoInfo;
-        if (params.mode == ChamferGenerator.USING_DISTANCE) {
-            if (inputs.getInputNum(Way.class) == 1) undoRedoInfo = I18n.tr("Chamfer of way {0}: {1}m, {2}m", inputs.getWays().getFirst().getUniqueId(), params.surfaceDistanceA, params.surfaceDistanceC);
-            else if (inputs.getInputNum(Way.class) <= 5) undoRedoInfo = I18n.tr("Chamfer of way {0}: {1}m, {2}m", inputs.getWays().stream().map(Way::getUniqueId).toList(), params.surfaceDistanceA, params.surfaceDistanceC);
+        if (params.mode == ChamferGenerator.DISTANCE_MODE) {
+            if (inputs.getInputNum(Way.class) == 1) undoRedoInfo = I18n.tr("Chamfer of way {0}: {1}m, {2}m", inputs.getWays().get(0).getUniqueId(), params.surfaceDistanceA, params.surfaceDistanceC);
+            else if (inputs.getInputNum(Way.class) <= 5) undoRedoInfo = I18n.tr("Chamfer of way {0}: {1}m, {2}m", inputs.getWays().stream().map(Way::getUniqueId).collect(Collectors.toList()), params.surfaceDistanceA, params.surfaceDistanceC);
             else undoRedoInfo = I18n.tr("Chamfer of {0} ways: {1}m, {2}m", inputs.getInputNum(Way.class), params.surfaceDistanceA, params.surfaceDistanceC);
         } else {
-            if (inputs.getInputNum(Way.class) == 1) undoRedoInfo = I18n.tr("Chamfer of way {0}: {1}m, {2}°", inputs.getWays().getFirst().getUniqueId(), params.surfaceDistanceA, params.angleADeg);
-            else if (inputs.getInputNum(Way.class) <= 5) undoRedoInfo = I18n.tr("Chamfer of way {0}: {1}m, {2}°", inputs.getWays().stream().map(Way::getUniqueId).toList(), params.surfaceDistanceA, params.angleADeg);
+            if (inputs.getInputNum(Way.class) == 1) undoRedoInfo = I18n.tr("Chamfer of way {0}: {1}m, {2}°", inputs.getWays().get(0).getUniqueId(), params.surfaceDistanceA, params.angleADeg);
+            else if (inputs.getInputNum(Way.class) <= 5) undoRedoInfo = I18n.tr("Chamfer of way {0}: {1}m, {2}°", inputs.getWays().stream().map(Way::getUniqueId).collect(Collectors.toList()), params.surfaceDistanceA, params.angleADeg);
             else undoRedoInfo = I18n.tr("Chamfer of {0} ways: {1}m, {2}°", inputs.getInputNum(Way.class), params.surfaceDistanceA, params.angleADeg);
         }
         return undoRedoInfo;
